k8s/add/argo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
   name: argo-route
   namespace: argocd
spec:
   parentRefs:
      - name: atlantic-gateway
        namespace: atlantic-gateway
   hostnames:
      - "argo.atlantic.shark.run"
   rules:
      - backendRefs:
           - group: ""
             kind: Service
             name: argo-argocd-server
             port: 80
             weight: 1
        matches:
           - path:
                value: /
