k8s/add/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-gateway
  namespace: atlantic
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: atlantic
spec:
  gatewayClassName: cilium-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: skitty-route
  namespace: atlantic
  labels:
    gateway: my-gateway
spec:
  # hostnames:
  #   "atlantic.shark.run"
  parentRefs:
    - name: my-gateway
  hostnames:
    - "atlantic.shark.run"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
          # method: GET
      backendRefs:
        - name: skitty
          namespace: atlantic
          port: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cosmog-route
  namespace: atlantic
  labels:
    gateway: my-gateway
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - "atlantic.shark.run"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/cosmog.v1.CosmogService/"
      backendRefs:
        - name: cosmog
          kind: Service
          group: ""
          namespace: atlantic
          port: 7800
          weight: 1
