k8s/add/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
   name: atlantic-routes
   namespace: atlantic
spec:
   parentRefs:
      - name: atlantic-gateway
        namespace: atlantic-gateway
   hostnames:
      - "atlantic.shark.run"
   rules:
      - backendRefs:
           - group: ""
             kind: Service
             name: overtools
             port: 12121
             weight: 1

        matches:
           - path:
                type: PathPrefix
                value: /test

      - matches:
           - path:
                type: PathPrefix
                value: "/cosmog.v1.CosmogService/"
        backendRefs:
           - name: cosmog
             kind: Service
             group: ""
             namespace: atlantic
             port: 7800
             weight: 1

      - backendRefs:
           - name: skitty
             port: 3000
        matches:
           - path:
                type: PathPrefix
                value: /
